# wr3

./: .env.example  .gitignore  PRODUCT.md  README.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json  preaudit  wr3
apps/api/: .env.example  pyproject.toml
apps/api/tests/: conftest.py  test_artifacts.py  test_audits_api.py  test_billing_api.py  test_bounty_sources.py  test_contract_metadata.py  test_disclosure_assessment.py  test_disclosure_packet_api.py  test_dispatcher.py  test_explorers.py  test_finding_review.py  test_fuzzing_worker.py  test_hardening.py  test_health.py  test_integrations_status.py  test_llm_budget.py  test_llm_source_cap.py  test_llm_triage.py  test_localhost_dashboard_api.py  test_money_alert.py  test_money_findings.py  test_monitoring_api.py  test_news.py  test_news_api.py  test_no_billing_api.py  test_notifications_api.py  test_observability.py  test_poc_worker.py  test_quota.py  test_rag.py  test_repository.py  test_retention.py  test_review_fixes_coverage.py  test_review_fixes_defensive.py  test_safe_harbor.py  test_safety.py  test_sandbox_policy.py  test_scoring.py  test_scout_autopilot_drain.py  test_scout_autopilot_health.py  (+13 more)
apps/api/wr3_api/: __init__.py  main.py
apps/api/wr3_api/adapters/: __init__.py  aderyn.py  base.py  heuristic_evm.py  heuristic_solana.py  registry.py  slither.py  source_tree.py  wake.py
apps/api/wr3_api/api/: dependencies.py
apps/api/wr3_api/core/: config.py
apps/api/wr3_api/domain/: enums.py  safety.py  schemas.py  scoring.py  state_machine.py
apps/api/wr3_api/services/: artifacts.py  auth.py  (+27 more)
(+187 files in other folders)
