[project]
name = "wr3-api"
version = "0.1.0"
description = "wr3 FastAPI core API"
requires-python = ">=3.13,<3.15"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "uvicorn[standard]>=0.34.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.25.0"
]
worker = [
  "celery[redis]>=5.4.0"
]
secure = [
  "cryptography>=43.0.0",
  "eth-account>=0.13.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py313"
